[fix]: Adjusting spacing

--- a/src/components/HomeCertificacaoEm4Semanas/index.css
+++ b/src/components/HomeCertificacaoEm4Semanas/index.css
@@ -4,7 +4,8 @@
     display: flex;
     background-color: #181818;
     justify-content: center;
-    min-height: 100vh;
+    min-height: calc(100vh - 140.75px);
+    align-items: center;
 }
 
 #hfwc_image > img {
